fixed spacing of result page results

--- a/src/pages/CSS/ResultsPage.css
+++ b/src/pages/CSS/ResultsPage.css
@@ -39,11 +39,11 @@
 }
 
 .subCareers h3 {
-    margin: 10px auto 0 auto;
+    margin: 10px 10px 0 10px;
 }
 
 .career-desc p {
-    margin: 0 10px;
+    margin: 10px 10px;
 }
 
 .review-system {
